force-app/main/default/objects/Product_Classification__c/Product_Classification__c.object-meta.xml
<CustomObject>
    <description>Product Classification</description>
    <label>Product Classification</label>
    <nameField>
        <label>Product Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>