force-app/main/default/objects/Product_Classification__c/fields/Case_Chatter_Feed__c.field-meta.xml
<CustomField>
    <fullName>Case_Chatter_Feed__c</fullName>
    <label>Case Chatter Feed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>