force-app/main/default/objects/Product_Classification__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <description>Different Class Types</description>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Semi Polished Stones</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Processed Food</fullName>
            </value>
            <value>
                <fullName>Industrial Intermediaries</fullName>
            </value>
            <value>
                <fullName>Luxury Consumables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>